Implement EPIC-08 STORY-08.2 retrieve endpoint
